--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web application created with React" />
+    <meta name="description" content="chatwhole" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>ChatWhole</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
